--- a/client/src/Components/Navbar/Navbar.module.scss
+++ b/client/src/Components/Navbar/Navbar.module.scss
@@ -3,9 +3,15 @@
 }
 
 .content {
-    max-width: 50%;
+    width: 50%;
     margin: 0 auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+@media only screen and (max-width: 768px) {
+    .content {
+        width: 100%;
+    }
 }
