--- a/client/src/styles/theme.scss
+++ b/client/src/styles/theme.scss
@@ -1,18 +1,39 @@
 @import './variables.scss';
 
 // Font
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap');
 
 // Global Styles
 .App {
   font-family: 'Open Sans', sans-serif;
   transition: all 0.3s;
   a {
-    color: rgb(9, 147, 211);
+    color: $highlight;
   }
 
   p {
     margin: 0;
+  }
+
+  h1 {
+    text-align: center;
+    font-size: 2.25rem;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-weight: 600;
+  }
+
+  h2 {
+    text-align: center;
+    font-weight: 400;
+    letter-spacing: 1px;
+  }
+
+  h3 {
+    text-align: center;
+    margin: 1rem 0;
+    letter-spacing: 1px;
+    font-size: 1.5rem;
   }
 }
 
