--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -7,3 +7,8 @@ $dark-page-background: #333;
 $dark-page-text: #FFF;
 
 $highlight: #3590FF;
+
+// Breakpoints
+
+$breakpoint-tablet: 768px;
+$breakpoint-mobile: 480px;
