--- a/client/src/styles/theme.scss
+++ b/client/src/styles/theme.scss
@@ -1,11 +1,11 @@
 @import './variables.scss';
 
 // Font
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;600&display=swap');
 
 // Global Styles
 .App {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Raleway', sans-serif;
   transition: all 0.3s;
   a {
     color: $highlight;
