--- a/client/src/styles/theme.scss
+++ b/client/src/styles/theme.scss
@@ -4,6 +4,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;600&display=swap');
 
 // Global Styles
+
+html {
+  scroll-behavior: smooth;
+}
+
 .App {
   font-family: 'Raleway', sans-serif;
   transition: all 0.3s;
