--- a/client/src/Components/Project/Project.module.scss
+++ b/client/src/Components/Project/Project.module.scss
@@ -11,6 +11,7 @@
     padding: 2rem;
     background: $light-page-background;
     color: $light-page-text;
+    transition: all 0.3s;
 
     &>.info {
         flex: 1 1 55%;
@@ -41,7 +42,6 @@
                 background-size: 0% 100%;
                 background-repeat: no-repeat;
                 padding: 0.5rem;
-                border: 2px solid $dark-page-background;
                 border-radius: 10px;
                 height: 50px;
                 width: 50px;
@@ -60,7 +60,7 @@
     }
 
     &>.image {
-        flex: 1 1 40%;
+        flex: 1 1 25%;
         margin: 1rem;
 
         &>img {
@@ -69,6 +69,10 @@
             box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
         }
 
+    }
+
+    &:hover {
+        box-shadow: 0 5px 10px rgba(154, 160, 185, .4), 0 15px 40px rgba(166, 173, 201, .5);
     }
 }
 
@@ -82,7 +86,7 @@
             &>.links {
                 &>div {
                     width: 35px;
-                    height: 35px;
+                    height: 3 5px;
                 }
             }
         }
