--- a/client/src/Pages/Home/Home.module.scss
+++ b/client/src/Pages/Home/Home.module.scss
@@ -64,25 +64,22 @@
 }
 
 .down {
-    margin-top: 5rem;
-    transition: all 0.3s;
-    position: absolute;
-    top: 70%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 4rem;
 
-    &>svg {
-        transform: scale(4);
+
+    & > svg {
+        transition: all 0.5s;
+        transform: translateY(0);
     }
 
-    &:hover {
+    &> svg:hover {
+        animation: bounce 0.75s 2;
         cursor: pointer;
-        animation: bounce 0.5s;
-        animation-iteration-count: 1;
-        top: 71%;
     }
 }
-
 
 .skills {
     margin: -7.5rem auto 0 auto;
@@ -194,15 +191,15 @@
 
 @keyframes bounce {
     0% {
-        top: 70%;
+        transform: translateY(0);
     }
 
-    50% {
-        top: 72%;
+    25% {
+        transform: translateY(20px);
     }
 
     100% {
-        top: 71%;
+        transform: translateY(0);
     }
 }
 
