--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,3 +11,15 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+*::-webkit-scrollbar {
+  width: 15px;
+  height: 15px;
+}
+*::-webkit-scrollbar-track {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+*::-webkit-scrollbar-thumb {
+  background-image: linear-gradient(135deg, #00aeff, #a68eff);
+	-webkit-box-shadow: 3px 3px 13px 1px rgba(0,0,0,.5);
+}
