--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,5 +21,6 @@ code {
 }
 *::-webkit-scrollbar-thumb {
   background-image: linear-gradient(135deg, #00aeff, #a68eff);
+  box-shadow: 3px 3px 13px 1px rgba(0,0,0,.5);
 	-webkit-box-shadow: 3px 3px 13px 1px rgba(0,0,0,.5);
 }
