--- a/client/src/Components/Footer/Footer.module.scss
+++ b/client/src/Components/Footer/Footer.module.scss
@@ -26,6 +26,18 @@
         height: 250px;
         background: white;
         margin: 3rem auto;
+
+        & .marker {
+            width: 25px;
+            height: 25px;
+            border-radius: 50%;
+            background: rgba(255, 82, 82, 0.8);
+            box-shadow: 0 0 0 0 rgba(255, 82, 82, 1);
+            &:hover {
+                cursor: pointer;
+                animation: pulse 1s infinite;
+            }
+        }
     }
 
     & > .footerBottom {
@@ -46,4 +58,21 @@
             }
         }
     }
+}
+
+@keyframes pulse {
+    0% {
+        transform: scale(0.95);
+        box-shadow: 0 0 0 0 rgba(255, 82, 82, 0.7);
+      }
+      
+      70% {
+        transform: scale(1);
+        box-shadow: 0 0 0 10px rgba(255, 82, 82, 0);
+      }
+      
+      100% {
+        transform: scale(0.95);
+        box-shadow: 0 0 0 0 rgba(255, 82, 82, 0);
+      }
 }
