--- a/client/src/Components/Footer/Footer.module.scss
+++ b/client/src/Components/Footer/Footer.module.scss
@@ -32,7 +32,7 @@
             height: 25px;
             border-radius: 50%;
             background: rgba(255, 82, 82, 0.8);
-            box-shadow: 0 0 0 0 rgba(255, 82, 82, 1);
+            box-shadow: 0px 0px 0px 0px rgba(255, 82, 82, 1);
             &:hover {
                 cursor: pointer;
                 animation: pulse 1s infinite;
@@ -63,16 +63,16 @@
 @keyframes pulse {
     0% {
         transform: scale(0.95);
-        box-shadow: 0 0 0 0 rgba(255, 82, 82, 0.7);
-      }
+        box-shadow: 0px 0px 0px 0px rgba(255, 82, 82, 0.7);
+    }
       
-      70% {
+    70% {
         transform: scale(1);
-        box-shadow: 0 0 0 10px rgba(255, 82, 82, 0);
-      }
+        box-shadow: 0px 0px 0px 10px rgba(255, 82, 82, 0);
+    }
       
-      100% {
+    100% {
         transform: scale(0.95);
-        box-shadow: 0 0 0 0 rgba(255, 82, 82, 0);
-      }
+        box-shadow: 0px 0px 0px 0px rgba(255, 82, 82, 0);
+    }
 }
