Revamped how component data is stored, updated Component component, added section on licensing

--- a/client/src/Components/Component/Component.module.scss
+++ b/client/src/Components/Component/Component.module.scss
@@ -9,6 +9,10 @@
     & > .alth3 {
         text-align: left;
         margin: 1rem 0;
+        & span {
+            float: right;
+            font-size: 1.1rem;
+        }
     }
 
     & > h4 {
@@ -33,6 +37,7 @@
         text-align: center;
         color: $light-page-text;
         overflow: scroll;
+        letter-spacing: 1px;
 
         & > thead  {
             & > tr > th {
