--- a/client/src/Components/TableOfContents/TableOfContents.module.scss
+++ b/client/src/Components/TableOfContents/TableOfContents.module.scss
@@ -4,7 +4,7 @@
     box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     padding: 1rem;
-    & ul {
+    & ul, ol {
         color: $highlight;
         letter-spacing: 2px;
         font-size: 1.1rem;
