--- a/client/src/Pages/CodeExamples/CodeExamples.module.scss
+++ b/client/src/Pages/CodeExamples/CodeExamples.module.scss
@@ -14,6 +14,10 @@
     & a {
         text-decoration: none;
     }
+
+    & > p:not(:first-of-type) {
+        margin-top: 1rem;
+    }
 }
 
 .toc {
