--- a/client/src/Components/Component/Component.module.scss
+++ b/client/src/Components/Component/Component.module.scss
@@ -46,47 +46,50 @@
         margin-bottom: 1rem;
     }
 
-    & > .example {
+    & .example {
+        overflow-x: auto;
         padding: 1rem;
     }
 
     & > .text {
         width: 100%;
     }
-
-    & > .propTable {
-        width: 90%;
-        margin: 0 auto;
-        text-align: center;
-        color: $light-page-text;
-        overflow: scroll;
-        letter-spacing: 1px;
-
-        & > thead  {
-            & > tr > th {
-                padding: 2rem;
-                letter-spacing: 1px;
-                background: rgb(233, 233, 233);
-            }
-        }
-
-        & > tbody {
-            & > tr > td {
-                padding: 0.5rem;
-                &  > p {
-                    margin: 0.25rem 0;
+    & > .tableContainer {
+        overflow-x: auto;
+        & > .propTable {
+            width: 90%;
+            margin: 0 auto;
+            text-align: center;
+            color: $light-page-text;
+            overflow: scroll;
+            letter-spacing: 1px;
+    
+            & > thead  {
+                & > tr > th {
+                    padding: 2rem;
+                    letter-spacing: 1px;
+                    background: rgb(233, 233, 233);
                 }
             }
-
-            & > tr:nth-of-type(2n + 1) {
-                background: rgb(250, 250, 250);
+    
+            & > tbody {
+                & > tr > td {
+                    padding: 0.5rem;
+                    &  > p {
+                        margin: 0.25rem 0;
+                    }
+                }
+    
+                & > tr:nth-of-type(2n + 1) {
+                    background: rgb(250, 250, 250);
+                }
+    
+                & > tr:nth-of-type(2n) {
+                    background: rgb(238, 238, 238);
+                }
             }
-
-            & > tr:nth-of-type(2n) {
-                background: rgb(238, 238, 238);
-            }
+    
         }
-
     }
 }
 
